in the process of converting to html files

--- a/Events.html
+++ b/Events.html
@@ -9,40 +9,36 @@
           <li><a href="Main.php">TEDxUWMadison</a></li>
         </div>
         <div class="right">
-          <li><a href="About.html">About</a></li>
-          <li><a href="Events.html">Events</a></li>
-          <li><a href="Join.html">Become a Member</a></li>
-          <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
+          <li><a href="About.php">About</a></li>
+          <li><a href="Events.php">Events</a></li>
+          <li><a href="Join.php">Become a Member</a></li>
+          <li><a href="FavoriteTalks.php">Our Favorite Talks</a></li>
         </div>
       </ul>
   </div>
 </head>
 <div id="hero">
-    <a href="https://win.wisc.edu/organization/tedxuwmadison/calendar/details/990128"><img src="hero.jpg"></a>
-    <h1>TEDxUWMadison</h1>
+    <img src="banner2.jpg">
+    <h1>Past Events</h1>
 </div>
 <body>
-  <h2>What is <a href="https://www.ted.com/about/programs-initiatives/tedx-program">TEDx?</a></h2>
-      <div class="videoBackground">
-        <h2>Watch our video to learn more</h2>
-        <video controls>
-          <source src="TEDxUWMadison.mp4" type="video/mp4">
-          <source src="TEDxUWMadison.ogg" type="video/ogg">
-        </video>
-     </div>
-<div class="backgroundIMG">
-  <h3><span>In the spirit of ideas worth spreading, TED has created a program called TEDx. TEDx is a program of local, 
-  self-organized events that bring people together to share a TED-like experience. Our event is called TEDxUWMadison,
-  where x = independently organized TED event. At our TEDxUWMadison event, TEDTalks video and live speakers will 
-  combine to spark deep discussion and connection in a small group. The TED Conference provides general guidance
-  for the TEDx program, but individual TEDx events, including ours, are self-organized.
-  </span></h3>
-  
-  <img src="mainBackIMG.jpg">
-</div>
-<div class="backgroundIMGsmall">
-    <img src="mainBackIMG.jpg">
-</div>
+  <div class ="pastIMG">
+      <h2>2015</h2>
+    <img src="2015.png">
+     <h2>The theme for 2015 was Crafting Global Minds.</h2>
+
+    <h3>Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=642660585873860">
+    HERE</a> for more information about our 2015 event.</h3>
+    <h3>TED linked our event on their site. Find that information <a href="http://www.ted.com/tedx/events/16423"> HERE</a>.</h3>
+  </div>
+  <br>
+  <div class ="pastIMG">
+    <h2>2014</h2>
+    <img src="2014.jpg">
+     <h2>The theme for 2014 was Designing Change.</h2>
+    <h3>Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=495013167305270">
+    HERE</a> for more information about our 2014 event.</h3>
+  </div>
 </body>
 <footer>
   <div id="footer">
