--- a/Main.html
+++ b/Main.html
@@ -9,10 +9,10 @@
           <li><a href="Main.php">TEDxUWMadison</a></li>
         </div>
         <div class="right">
-          <li><a href="About.html">About</a></li>
-          <li><a href="Events.html">Events</a></li>
-          <li><a href="Join.html">Become a Member</a></li>
-          <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
+          <li><a href="About.php">About</a></li>
+          <li><a href="Events.php">Events</a></li>
+          <li><a href="Join.php">Become a Member</a></li>
+          <li><a href="FavoriteTalks.php">Our Favorite Talks</a></li>
         </div>
       </ul>
   </div>
