publishing errors potentially fixed

--- a/About.html
+++ b/About.html
@@ -6,13 +6,13 @@
   <div id="nav">
       <ul class="mainMenu">
         <div id="left">
-          <li><a href="Main.php">TEDxUWMadison</a></li>
+          <li><a href="index.html">TEDxUWMadison</a></li>
         </div>
         <div class="right">
-          <li><a href="About.php">About</a></li>
-          <li><a href="Events.php">Events</a></li>
-          <li><a href="Join.php">Become a Member</a></li>
-          <li><a href="FavoriteTalks.php">Our Favorite Talks</a></li>
+          <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
+          <li><a href="Events.html">Events</a></li>
+          <li><a href="Join.html">Become a Member</a></li>
+          <li><a href="About.html">About</a></li>
         </div>
       </ul>
   </div>
@@ -33,18 +33,18 @@
     <h2>Meet the exec board</h2>
     <h2>Click <a href="Exec_bios.php">HERE</a> to learn more about the exec board!</h2>
     <ul class="execContainer">
-    <a href="Exec_bios.php#bio1">
+    <a href="Exec_bios.html#bio1">
       <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
-     <a href="Exec_bios.php#bio2"> <li class="execMember"><img src="filler.jpg" onmouseover="this.src='filler_hover.jpg';"
+     <a href="Exec_bios.html#bio2"> <li class="execMember"><img src="filler.jpg" onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
-     <a href="Exec_bios.php#bio3"> <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
+     <a href="Exec_bios.html#bio3"> <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
-     <a href="Exec_bios.php#bio4"> <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
+     <a href="Exec_bios.html#bio4"> <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
-     <a href="Exec_bios.php#bio5"> <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
+     <a href="Exec_bios.html#bio5"> <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
-     <a href="Exec_bios.php#bio6"><li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
+     <a href="Exec_bios.html#bio6"><li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
   </ul>
     <h2>About TEDx, x = independently organized event</h2>
