--- a/Join.html
+++ b/Join.html
@@ -18,26 +18,37 @@
   </div>
 </head>
 <div id="hero">
-    <img src="banner2.jpg">
-    <h1>Past Events</h1>
+    <img src="banner3.jpg">
+    <h1>Interested in joining?</h1>
 </div>
 <body>
-  <div class ="pastIMG">
-      <h2>2015</h2>
-    <img src="2015.png">
-     <h2>The theme for 2015 was Crafting Global Minds.</h2>
-
-    <h3>Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=642660585873860">
-    HERE</a> for more information about our 2015 event.</h3>
-    <h3>TED linked our event on their site. Find that information <a href="http://www.ted.com/tedx/events/16423"> HERE</a>.</h3>
+  <div id ="contactImage">
+     <h2><a href="mailto:grode2@wisc.edu?Subject=Questions!" target="_top">Email us</a> to be added to 
+      our email list or to get more information!</h2>
+    <img src="tedExec.jpg">
   </div>
-  <br>
-  <div class ="pastIMG">
-    <h2>2014</h2>
-    <img src="2014.jpg">
-     <h2>The theme for 2014 was Designing Change.</h2>
-    <h3>Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=495013167305270">
-    HERE</a> for more information about our 2014 event.</h3>
+  <div class="join">
+    <h2>Why Join?</h2>
+    <p>Become a part of our campus-wide event every Fall and a close community year round!</p>
+
+    <h2>Details:</h2>
+    <h4>Fall Semester:</h4>
+    <p>TEDxUWMadison meets every other Tuesday to watch TED talks and organize our event.</p>
+    <h4>Spring Semester:</h4> 
+    <p>TEDxUWMadison meets every other Tuesday to watch TED talks and socialize! Social
+      events include: bowling, ice cream socials, an event where members can give their own
+      TED talk and more! TEDxUWMadison's opportunities are endless and we would love to add more members to our community.</p>
+
+    <h4>Member Dues:</h4>
+    <div class ="twoColumnFlexHorizontal">
+      <div class="columnOneHorizontal">
+            <p>Semester: $15</p>
+      </div>
+      <div class="columnTwoHorizontal">
+        <p>Year: $20</p>
+      </div> 
+    </div>
+    <p>Member dues cover your ticket to the event every fall and most social events.</p>
   </div>
 </body>
 <footer>
