--- a/FavoriteTalks.html
+++ b/FavoriteTalks.html
@@ -6,13 +6,13 @@
   <div id="nav">
       <ul class="mainMenu">
         <div id="left">
-          <li><a href="Main.php">TEDxUWMadison</a></li>
+          <li><a href="index.html">TEDxUWMadison</a></li>
         </div>
         <div class="right">
-          <li><a href="About.php">About</a></li>
-          <li><a href="Events.php">Events</a></li>
-          <li><a href="Join.php">Become a Member</a></li>
-          <li><a href="FavoriteTalks.php">Our Favorite Talks</a></li>
+          <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
+          <li><a href="Events.html">Events</a></li>
+          <li><a href="Join.html">Become a Member</a></li>
+          <li><a href="About.html">About</a></li>
         </div>
       </ul>
   </div>
