added two lines to potentially make mobile

--- a/Events.html
+++ b/Events.html
@@ -2,7 +2,7 @@
   <link href="Format.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Lato">
-<head meta name="viewport" content="width=device-width, initial-scale=1">
+<head >
   <div id="nav">
       <ul class="mainMenu">
         <div id="left">
