--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
           <div class="footerListWords">
             <a href="https://www.ted.com/about/programs-initiatives/tedx-program">TEDx</a>
-            <a href="Join.php">Become a member</a>
+            <a href="Join.html">Become a member</a>
             <a href="http://www.ted.com/">TED</a>
           </div>
         </div>
