--- a/Join.html
+++ b/Join.html
@@ -9,10 +9,9 @@
           <li><a href="index.html">TEDxUWMadison</a></li>
         </div>
         <div class="right">
-          <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
-          <li><a href="Events.html">Events</a></li>
-          <li><a href="Join.html">Become a Member</a></li>
-          <li><a href="About.html">About</a></li>
+          <li><a href="FavoriteTalks.html">Our Favorite Talks</a> <a href="Events.html">Events</a>
+           <a href="Join.html">Become a Member</a>
+           <a href="About.html">About</a></li>
         </div>
       </ul>
   </div>
