--- a/Join.html
+++ b/Join.html
@@ -2,7 +2,9 @@
   <link href="Format.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Lato">
-<head >
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <div id="nav">
   <div id="nav">
       <ul class="mainMenu">
         <div id="left">
