--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
       </ul>
   </div>
 </head>
+<div class="mobileNav">
+        <div class="top">
+          <li><a href="index.html">TEDxUWMadison</a></li>
+        </div>
+        <div class="bottom">
+          <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
+          <li><a href="Events.html">Events</a></li>
+          <li><a href="Join.html">Become a Member</a></li>
+          <li><a href="About.html">About</a></li>
+        </div>
+      </ul>
+</div>
+
+
 <div id="hero">
     <a href="https://win.wisc.edu/organization/tedxuwmadison/calendar/details/990128"><img src="hero.jpg"></a>
     <h1>TEDxUWMadison</h1>
