--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <div id="nav">
       <ul class="mainMenu">
         <div id="left">
-          <li><a href="index.html">TEDxUWMadison</a></li>
+          <a href="index.html">TEDxUWMadison</a>
         </div>
+        <br>
         <div class="right">
           <li><a href="FavoriteTalks.html">Our Favorite Talks</a> <a href="Events.html">Events</a>
              <a href="Join.html">Become a Member</a> <a href="About.html">About</a></li>
