--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <div id="nav">
       <ul class="mainMenu">
         <div id="left">
-          <a href="index.html">TEDxUWMadison</a>
+          <li><a href="index.html">TEDxUWMadison</a></li>
         </div>
-        <br>
         <div class="right">
-          <li><a href="FavoriteTalks.html">Our Favorite Talks</a> <a href="Events.html">Events</a>
-             <a href="Join.html">Become a Member</a> <a href="About.html">About</a></li>
+          <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
+          <li><a href="Events.html">Events</a></li>
+          <li><a href="Join.html">Become a Member</a></li>
+          <li><a href="About.html">About</a></li>
         </div>
       </ul>
   </div>
@@ -22,10 +23,7 @@
           <li><a href="index.html">TEDxUWMadison</a></li>
         </div>
         <div class="bottom">
-          <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
-          <li><a href="Events.html">Events</a></li>
-          <li><a href="Join.html">Become a Member</a></li>
-          <li><a href="About.html">About</a></li>
+          <li><a href="FavoriteTalks.html">Our Favorite Talks</a> <a href="Events.html">Events</a> <a href="Join.html">Become a Member</a> <a href="About.html">About</a></li>
         </div>
       </ul>
 </div>
