--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <div class="mobileNav">
         <div class="top">
-          <li><a href="index.html">TEDxUWMadison</a></li>
+          <a href="index.html">TEDxUWMadison</a>
         </div>
         <br>
         <div class="bottom">
