--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <br>
         <div class="bottom">
-          <li><a href="FavoriteTalks.html">Our Favorite Talks</a> | <a href="Events.html">Events</a> | <a href="Join.html">Become a Member</a> |" <a href="About.html">About</a></li>
+          <li><a href="FavoriteTalks.html">Our Favorite Talks</a> | <a href="Events.html">Events</a> | <a href="Join.html">Become a Member</a> | <a href="About.html">About</a></li>
         </div>
       </ul>
 </div>
