--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
           <li><a href="index.html">TEDxUWMadison</a></li>
         </div>
         <div class="right">
-          <li><a href="FavoriteTalks.html">Favorite Talks</a></li>
+          <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
           <li><a href="Events.html">Events</a></li>
-          <li><a href="Join.html">Join</a></li>
+          <li><a href="Join.html">Become A Member</a></li>
           <li><a href="About.html">About</a></li>
         </div>
       </ul>
@@ -24,7 +24,7 @@
         </div>
         <br>
         <div class="bottom">
-          <li><a href="FavoriteTalks.html">Our Favorite Talks</a> | <a href="Events.html">Events</a> | <a href="Join.html">Become a Member</a> | <a href="About.html">About</a></li>
+          <li><a href="FavoriteTalks.html">Favorite Talks</a> | <a href="Events.html">Events</a> | <a href="Join.html">Join</a> | <a href="About.html">About</a></li>
         </div>
       </ul>
 </div>
