--- a/Join.html
+++ b/Join.html
@@ -18,6 +18,17 @@
       </ul>
   </div>
 </head>
+<div class="mobileNav">
+        <div class="top">
+          <a href="index.html">TEDxUWMadison</a>
+        </div>
+        <br>
+        <div class="bottom">
+          <li><a href="FavoriteTalks.html">Favorite Talks</a> | <a href="Events.html">Events</a> | <a href="Join.html">Join</a> | <a href="About.html">About</a></li>
+        </div>
+      </ul>
+</div>
+
 <div id="hero">
     <img src="banner3.jpg">
     <h1>Interested in joining?</h1>
