--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="right">
           <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
           <li><a href="Events.html">Events</a></li>
-          <li><a href="Join.html">Become A Member</a></li>
+          <li><a href="Join.html">Become a Member</a></li>
           <li><a href="About.html">About</a></li>
         </div>
       </ul>
