--- a/Join.html
+++ b/Join.html
@@ -28,10 +28,11 @@
         </div>
       </ul>
 </div>
-
-<div id="hero">
+<div class="mobileh1">
+  <div id="hero">
     <img src="banner3.jpg">
     <h1>Interested in joining?</h1>
+  </div>
 </div>
 <body>
   <div id ="contactImage">
