add google analytics

--- a/Exec_bios.html
+++ b/Exec_bios.html
@@ -2,6 +2,16 @@
   <link href="Format.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Lato">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-87117074-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <head>
 <img src="tedx_pattern.png" id="bg" alt="">
   <div id="nav">
@@ -30,7 +40,7 @@
       <p>Nihal enjoys watching Ted talks on the Ted talk app on his phone in his free time. He joined TedX and executive board because he thinks Ted talks are awesome and wanted to get more involved in planning UW's very own TedX event. He seeks to become a doctor in the future and enjoys listening to music, hanging out with friends, watching Netflix, and watching Ted talks in his free time.</p><br></a>
       <a name="bio4"><img src="filler.jpg" height="300" width="300"><br>
       <p>Lindsay joined TEDxUWMadison as a freshman, and has been a member of the executive board since her sophomore year. She was fortunate enough to attend TED Talks Live: Education Revolution in New York City fall of 2015 with Curator and President, Sofi LaLonde. Lindsay loves the global aspect of TED, and as an avid traveller herself, is always intrigued by the advances and adventures people are having around the world.</p><br></a>
-      <a name="bio5"><img src="filler.jpg" height="300" width="300"><br>
+      <a name="bio5"><img src="mitchell.jpg" height="300" width="300"><br>
       <p>Mitchell first learned about TEDxUWMadison at the student org fair freshman year and has been in love ever since. His favorite TED Talk is "Why city flags may be the worst-designed thing you've never noticed" by Roman Mars. Mitchell enjoys being outside and is very active year round. During the winter he enjoys cross country and downhill skiing. Mitchell is also a member of Euchre club. His career goal is to be an Epidemiologist.</p><br></a>
       <a name="bio6"><img src="filler.jpg" height="300" width="300"><br>
       <p>Nick joined Tedx as a Sophomore looking to get involved in a group where he could provide a substantial impact as a general member. As an avid listener of Ted talks, Tedx was a perfect fit! When not controlling the finance activities for Tedx, you will probably find Nick watching or playing sports, more specifically, the Packers and Bucks.</p><br></a>
