--- a/About.html
+++ b/About.html
@@ -2,6 +2,16 @@
   <link href="Format.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Lato">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-87117074-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <div id="nav">
@@ -54,7 +64,7 @@
                 onmouseout="this.src='filler.jpg';"></li></a>
      <a href="Exec_bios.html#bio4"> <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
-     <a href="Exec_bios.html#bio5"> <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
+     <a href="Exec_bios.html#bio5"> <li class="execMember"><img src="mitchell.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
      <a href="Exec_bios.html#bio6"><li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
