add mitchell's images

--- a/About.html
+++ b/About.html
@@ -65,8 +65,8 @@
                 onmouseout="this.src='filler.jpg';"></li></a>
      <a href="Exec_bios.html#bio4"> <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
-     <a href="Exec_bios.html#bio5"> <li class="execMember"><img src="mitchell.jpg"onmouseover="this.src='filler_hover.jpg';"
-                onmouseout="this.src='filler.jpg';"></li></a>
+     <a href="Exec_bios.html#bio5"> <li class="execMember"><img src="mitchell.jpg"onmouseover="this.src='mitchell_hover.jpg';"
+                onmouseout="this.src='mitchell.jpg';"></li></a>
      <a href="Exec_bios.html#bio6"><li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
   </ul>
