image fix. mobile

--- a/About.html
+++ b/About.html
@@ -80,7 +80,7 @@
     </p>
 
     <h2>About TED</h2>
-
+    <div class="aboutTed">
     <p>TED is a nonprofit organization devoted to Ideas Worth Spreading. Started as a four-day 
       conference in California 30 years ago, TED has grown to support its mission with multiple <img src="tedAbout.png">
       initiatives. The two annual TED Conferences invite the world's leading thinkers and doers to 
@@ -96,6 +96,7 @@
       helping world-changing innovators from around the globe to amplify the impact of their remarkable projects and activities.
       Follow TED on <a href="http://twitter.com/TEDTalks">Twitter</a>, or on <a href="http://www.facebook.com/TED">Facebook</a>.
     </p>
+    </div>
     <h2>About This Site</h2>
     <p>This site was designed and created by Jessica Tang and Aaron Grode, both members of TEDxUWMadison.
         Members of TEDxUWMadison since 2015, they now are co-leads of the web team that created the site and
