added .ico files

--- a/Events.html
+++ b/Events.html
@@ -11,8 +11,8 @@
 
   ga('create', 'UA-87117074-1', 'auto');
   ga('send', 'pageview');
-
 </script>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />`
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <div id="nav">
       <ul class="mainMenu">
@@ -41,23 +41,26 @@
 
 <div id="hero">
     <img src="banner2.jpg">
-    <h1>Past Events</h1>
+    <h1>Events</h1>
 </div>
 <body>
   <div class ="pastIMG">
-      <h2>2015</h2>
+    <h2>2016 - Thinking Differently</h2>
+    <img src="hero.jpg">
+  </div>
+    <p>We are incredibly proud to announce that our 2016 event sold out in less than two minutes!
+        If you were unable to get tickets and wanted to attend, the live stream to the event will be 
+        on most of our social media. Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/?fref=ts">HERE</a> for the facebook page and livestream during the event.</p>
+  <div class ="pastIMG">
+      <h2>2015 - Crafting Global Minds</h2>
     <img src="2015.png">
-     <h2>The theme for 2015 was Crafting Global Minds.</h2>
-
     <h3>Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=642660585873860">
-    HERE</a> for more information about our 2015 event.</h3>
-    <h3>TED linked our event on their site. Find that information <a href="http://www.ted.com/tedx/events/16423"> HERE</a>.</h3>
+    HERE</a> or <a href="http://www.ted.com/tedx/events/16423"> HERE</a> for more information about our 2015 event.</h3>
   </div>
   <br>
   <div class ="pastIMG">
-    <h2>2014</h2>
+    <h2>2014 - Designing Change</h2>
     <img src="2014.jpg">
-     <h2>The theme for 2014 was Designing Change.</h2>
     <h3>Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=495013167305270">
     HERE</a> for more information about our 2014 event.</h3>
   </div>
