added .ico files

--- a/About.html
+++ b/About.html
@@ -14,8 +14,8 @@
   ga('send', 'pageview');
 
 </script>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />`
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />  
+<meta name="viewport" content="width=device-width, initial-scale=1">
   <div id="nav">
       <ul class="mainMenu">
         <div id="left">
