--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
   ga('send', 'pageview');
 
 </script>
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />  
+<link rel="shortcut icon" href="x.png" type="image/x-icon" />  
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <div id="nav">
       <ul class="mainMenu">
