--- a/Events.html
+++ b/Events.html
@@ -12,7 +12,7 @@
   ga('create', 'UA-87117074-1', 'auto');
   ga('send', 'pageview');
 </script>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />`
+  <link rel="shortcut icon" href="x.png" type="image/x-icon" />  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <div id="nav">
       <ul class="mainMenu">
