--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   ga('send', 'pageview');
 
 </script>
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />  
+<title>TEDxUWMadison</title>
+  <link rel="shortcut icon" href="x.png" type="image/x-icon" />  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <div id="nav">
       <ul class="mainMenu">
