--- a/Exec_bios.html
+++ b/Exec_bios.html
@@ -13,7 +13,7 @@
   ga('send', 'pageview');
 
 </script>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />`
+ <link rel="shortcut icon" href="x.png" type="image/x-icon" />  
 <img src="tedx_pattern.png" id="bg" alt="">
   <div id="nav">
       <ul class="mainMenu">
