--- a/Events.html
+++ b/Events.html
@@ -12,6 +12,7 @@
   ga('create', 'UA-87117074-1', 'auto');
   ga('send', 'pageview');
 </script>
+<title>TEDxUWMadison</title>
   <link rel="shortcut icon" href="x.png" type="image/x-icon" />  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <div id="nav">
