--- a/Exec_bios.html
+++ b/Exec_bios.html
@@ -13,6 +13,7 @@
   ga('send', 'pageview');
 
 </script>
+<title>TEDxUWMadison</title>
  <link rel="shortcut icon" href="x.png" type="image/x-icon" />  
 <img src="tedx_pattern.png" id="bg" alt="">
   <div id="nav">
