--- a/FavoriteTalks.html
+++ b/FavoriteTalks.html
@@ -14,6 +14,7 @@
   ga('send', 'pageview');
 
 </script>
+<title>TEDxUWMadison</title>
     <link rel="shortcut icon" href="x.png" type="image/x-icon" />  
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <div id="nav">
