tab changes and exec page

--- a/Exec_bios.html
+++ b/Exec_bios.html
@@ -11,24 +11,36 @@
 
   ga('create', 'UA-87117074-1', 'auto');
   ga('send', 'pageview');
-
 </script>
-<title>TEDxUWMadison</title>
- <link rel="shortcut icon" href="x.png" type="image/x-icon" />  
+  <title>TEDxUWMadison</title>
+  <link rel="shortcut icon" href="x.png" type="image/x-icon" />  
 <img src="tedx_pattern.png" id="bg" alt="">
-  <div id="nav">
+
+    <div id="nav">
       <ul class="mainMenu">
         <div id="left">
-          <li><a href="Main.php">TEDxUWMadison</a></li>
+          <li><a href="index.html">TEDxUWMadison</a></li>
         </div>
         <div class="right">
-          <li><a href="About.html">About</a></li>
+          <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
           <li><a href="Events.html">Events</a></li>
           <li><a href="Join.html">Become a Member</a></li>
-          <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
+          <li><a href="About.html">About</a></li>
         </div>
       </ul>
   </div>
+</head>
+<div class="mobileNav">
+        <div class="top">
+          <a href="index.html">TEDxUWMadison</a>
+        </div>
+        <br>
+        <div class="bottom">
+          <li><a href="FavoriteTalks.html">Favorite Talks</a> | <a href="Events.html">Events</a> | <a href="Join.html">Join</a> | <a href="About.html">About</a></li>
+        </div>
+      </ul>
+</div>
+  
 </head>
 
   <div class ="exec_bios_flex">
