tab changes and exec page

--- a/Exec_bios.html
+++ b/Exec_bios.html
@@ -15,7 +15,7 @@
   <title>TEDxUWMadison</title>
   <link rel="shortcut icon" href="x.png" type="image/x-icon" />  
 <img src="tedx_pattern.png" id="bg" alt="">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
     <div id="nav">
       <ul class="mainMenu">
         <div id="left">
