--- a/Events.html
+++ b/Events.html
@@ -52,6 +52,7 @@
     <p>We are incredibly proud to announce that our 2016 event sold out in less than two minutes!
         If you were unable to get tickets and wanted to attend, the live stream to the event will be 
         on most of our social media. Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/?fref=ts">HERE</a> for the facebook page and livestream during the event.</p>
+        <h2>Check out our speakers <a href="speaker.html">HERE</a>! We will be updating our speakers in upcoming months as talks are finalized.<h2>
   <div class ="pastIMG">
       <h2>2015 - Crafting Global Minds</h2>
     <img src="2015.png">
