links open new tabs

--- a/About.html
+++ b/About.html
@@ -49,7 +49,7 @@
 </div>
 <body>
   <div class="videoBackgroundAbout">
-    <h2>What is <a href="https://www.ted.com/about/programs-initiatives/tedx-program">TEDx?</a></h2>
+    <h2>What is <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx?</a></h2>
         <iframe
             src="https://www.youtube.com/embed/N-l1xtCMnpw" frameborder="0" allowfullscreen>
         </iframe>
@@ -96,7 +96,7 @@
       to change the world get help translating their wishes into action; TEDx, which supports individuals or 
       groups in hosting local, self- organized TED-style events around the world, and the TED Fellows program, 
       helping world-changing innovators from around the globe to amplify the impact of their remarkable projects and activities.
-      Follow TED on <a href="http://twitter.com/TEDTalks">Twitter</a>, or on <a href="http://www.facebook.com/TED">Facebook</a>.
+      Follow TED on <a href="http://twitter.com/TEDTalks" target="_blank">Twitter</a>, or on <a href="http://www.facebook.com/TED" target="_blank">Facebook</a>.
     </p>
     </div>
     <h2>About This Site</h2>
@@ -107,11 +107,11 @@
 
           <div class="twoColumnFlexHorizontal">
             <div class="columnOneHorizontal">
-              <a href="https://www.linkedin.com/in/jessrosetang"><img src="filler2.jpg" onmouseover="this.src='filler2_hover.jpg';"
+              <a href="https://www.linkedin.com/in/jessrosetang" target="_blank"><img src="filler2.jpg" onmouseover="this.src='filler2_hover.jpg';"
                 onmouseout="this.src='filler2.jpg';"></a>
             </div>
             <div class="columnTwoHorizontal">
-              <a href="https://www.linkedin.com/in/aarongrode"><img src="filler.jpg" onmouseover="this.src='filler_hover.jpg';"
+              <a href="https://www.linkedin.com/in/aarongrode" target="_blank"><img src="filler.jpg" onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></a>
             </div>
           </div>
@@ -123,31 +123,31 @@
         <div class="columnOne">
           <br>
             <div class="footerList">
-            <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/"><img src="facebook.png" style="height:45px;"
+            <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/" target="_blank"><img src="facebook.png" style="height:45px;"
               onmouseover="this.src='facebook_grey.png';" onmouseout="this.src='facebook.png';"></a>
 
-            <a href="https://www.instagram.com/tedx_uwmadison/"><img src="instagram.png" style="height:45px;"
+            <a href="https://www.instagram.com/tedx_uwmadison/" target="_blank"><img src="instagram.png" style="height:45px;"
               onmouseover="this.src='instagram_grey.png';" onmouseout="this.src='instagram.png';"></a>
 
-            <a href="https://twitter.com/tedxuwmadison"><img src="twitter.png" style="height:45px;"
+            <a href="https://twitter.com/tedxuwmadison" target="_blank"><img src="twitter.png" style="height:45px;"
               onmouseover="this.src='twitter_grey.png';" onmouseout="this.src='twitter.png';"></a>
 
             <a href="mailto:smlalonde@wisc.edu?Subject=Questions!" target="_top"><img src="mail.png" style="height:45px;"
               onmouseover="this.src='mail_grey.png';" onmouseout="this.src='mail.png';"></a>
 
-            <a href="http://snapchat.com/add/tedxuwmadison"><img src="snapchat.png" style="height:45px;"
+            <a href="http://snapchat.com/add/tedxuwmadison" target="_blank"><img src="snapchat.png" style="height:45px;"
               onmouseover="this.src='snapchat_grey.png';" onmouseout="this.src='snapchat.png';"></a>
 
             </div>
           <div class="footerListWords">
-            <a href="https://www.ted.com/about/programs-initiatives/tedx-program">TEDx</a>
+            <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx</a>
             <a href="Join.html">Become a member</a>
-            <a href="http://www.ted.com/">TED</a>
+            <a href="http://www.ted.com/" target="_blank">TED</a>
           </div>
         </div>
         <div class="columnTwo">
           <div class="footerList">
-            <a href="http://www.ted.com/">This independent TEDx event is operated under license from TED.</a>
+            <a href="http://www.ted.com/" target="_blank">This independent TEDx event is operated under license from TED.</a>
           </div>
           <p> &#169; 2016 Designed and developed by Jessica Tang and Aaron Grode.</p>
         </div>
