--- a/Events.html
+++ b/Events.html
@@ -51,19 +51,19 @@
   </div>
     <p>We are incredibly proud to announce that our 2016 event sold out in less than two minutes!
         If you were unable to get tickets and wanted to attend, the live stream to the event will be 
-        on most of our social media. Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/?fref=ts">HERE</a> for the facebook page and livestream during the event.</p>
+        on most of our social media. Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/?fref=ts" target="_blank">HERE</a> for the facebook page and livestream during the event.</p>
         <h2>Check out our speakers <a href="speaker.html">HERE</a>! We will be updating our speakers in upcoming months as talks are finalized.<h2>
   <div class ="pastIMG">
       <h2>2015 - Crafting Global Minds</h2>
     <img src="2015.png">
-    <h3>Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=642660585873860">
-    HERE</a> or <a href="http://www.ted.com/tedx/events/16423"> HERE</a> for more information about our 2015 event.</h3>
+    <h3>Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=642660585873860" target="_blank">
+    HERE</a> or <a href="http://www.ted.com/tedx/events/16423" target="_blank"> HERE</a> for more information about our 2015 event.</h3>
   </div>
   <br>
   <div class ="pastIMG">
     <h2>2014 - Designing Change</h2>
     <img src="2014.jpg">
-    <h3>Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=495013167305270">
+    <h3>Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=495013167305270" target="_blank">
     HERE</a> for more information about our 2014 event.</h3>
   </div>
 </body>
@@ -73,31 +73,31 @@
         <div class="columnOne">
           <br>
             <div class="footerList">
-            <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/"><img src="facebook.png" style="height:45px;"
+            <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/" target="_blank"><img src="facebook.png" style="height:45px;"
               onmouseover="this.src='facebook_grey.png';" onmouseout="this.src='facebook.png';"></a>
 
-            <a href="https://www.instagram.com/tedx_uwmadison/"><img src="instagram.png" style="height:45px;"
+            <a href="https://www.instagram.com/tedx_uwmadison/" target="_blank"><img src="instagram.png" style="height:45px;"
               onmouseover="this.src='instagram_grey.png';" onmouseout="this.src='instagram.png';"></a>
 
-            <a href="https://twitter.com/tedxuwmadison"><img src="twitter.png" style="height:45px;"
+            <a href="https://twitter.com/tedxuwmadison" target="_blank"><img src="twitter.png" style="height:45px;"
               onmouseover="this.src='twitter_grey.png';" onmouseout="this.src='twitter.png';"></a>
 
             <a href="mailto:smlalonde@wisc.edu?Subject=Questions!" target="_top"><img src="mail.png" style="height:45px;"
               onmouseover="this.src='mail_grey.png';" onmouseout="this.src='mail.png';"></a>
 
-            <a href="http://snapchat.com/add/tedxuwmadison"><img src="snapchat.png" style="height:45px;"
+            <a href="http://snapchat.com/add/tedxuwmadison" target="_blank"><img src="snapchat.png" style="height:45px;"
               onmouseover="this.src='snapchat_grey.png';" onmouseout="this.src='snapchat.png';"></a>
 
             </div>
           <div class="footerListWords">
-            <a href="https://www.ted.com/about/programs-initiatives/tedx-program">TEDx</a>
+            <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx</a>
             <a href="Join.html">Become a member</a>
-            <a href="http://www.ted.com/">TED</a>
+            <a href="http://www.ted.com/" target="_blank">TED</a>
           </div>
         </div>
         <div class="columnTwo">
           <div class="footerList">
-            <a href="http://www.ted.com/">This independent TEDx event is operated under license from TED.</a>
+            <a href="http://www.ted.com/" target="_blank">This independent TEDx event is operated under license from TED.</a>
           </div>
           <p> &#169; 2016 Designed and developed by Jessica Tang and Aaron Grode.</p>
         </div>
