--- a/FavoriteTalks.html
+++ b/FavoriteTalks.html
@@ -153,31 +153,31 @@
         <div class="columnOne">
           <br>
             <div class="footerList">
-            <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/"><img src="facebook.png" style="height:45px;"
+            <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/" target="_blank"><img src="facebook.png" style="height:45px;"
               onmouseover="this.src='facebook_grey.png';" onmouseout="this.src='facebook.png';"></a>
 
-            <a href="https://www.instagram.com/tedx_uwmadison/"><img src="instagram.png" style="height:45px;"
+            <a href="https://www.instagram.com/tedx_uwmadison/" target="_blank"><img src="instagram.png" style="height:45px;"
               onmouseover="this.src='instagram_grey.png';" onmouseout="this.src='instagram.png';"></a>
 
-            <a href="https://twitter.com/tedxuwmadison"><img src="twitter.png" style="height:45px;"
+            <a href="https://twitter.com/tedxuwmadison" target="_blank"><img src="twitter.png" style="height:45px;"
               onmouseover="this.src='twitter_grey.png';" onmouseout="this.src='twitter.png';"></a>
 
             <a href="mailto:smlalonde@wisc.edu?Subject=Questions!" target="_top"><img src="mail.png" style="height:45px;"
               onmouseover="this.src='mail_grey.png';" onmouseout="this.src='mail.png';"></a>
 
-            <a href="http://snapchat.com/add/tedxuwmadison"><img src="snapchat.png" style="height:45px;"
+            <a href="http://snapchat.com/add/tedxuwmadison" target="_blank"><img src="snapchat.png" style="height:45px;"
               onmouseover="this.src='snapchat_grey.png';" onmouseout="this.src='snapchat.png';"></a>
 
             </div>
           <div class="footerListWords">
-            <a href="https://www.ted.com/about/programs-initiatives/tedx-program">TEDx</a>
+            <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx</a>
             <a href="Join.html">Become a member</a>
-            <a href="http://www.ted.com/">TED</a>
+            <a href="http://www.ted.com/" target="_blank">TED</a>
           </div>
         </div>
         <div class="columnTwo">
           <div class="footerList">
-            <a href="http://www.ted.com/">This independent TEDx event is operated under license from TED.</a>
+            <a href="http://www.ted.com/" target="_blank">This independent TEDx event is operated under license from TED.</a>
           </div>
           <p> &#169; 2016 Designed and developed by Jessica Tang and Aaron Grode.</p>
         </div>
