php to heml fix

--- a/About.html
+++ b/About.html
@@ -56,7 +56,7 @@
   </div>
   <div class ="aboutBody">
     <h2>Meet the exec board</h2>
-    <h2>Click <a href="Exec_bios.php">HERE</a> to learn more about the exec board!</h2>
+    <h2>Click <a href="Exec_bios.html">HERE</a> to learn more about the exec board!</h2>
     <ul class="execContainer">
     <a href="Exec_bios.html#bio1">
       <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
