--- a/About.html
+++ b/About.html
@@ -37,7 +37,7 @@
         </div>
         <br>
         <div class="bottom">
-          <li><a href="FavoriteTalks.html">Favorite Talks</a> | <a href="Events.html">Events</a> | <a href="Join.html">Join</a> | <a href="About.html">About</a></li>
+          <li><a href="About.html">About</a> | <a href="Events.html">Events</a> | <a href="Join.html">Join</a> | <a href="FavoriteTalks.html">Favorite Talks</a></li>
         </div>
       </ul>
 </div>
