--- a/Exec_bios.html
+++ b/Exec_bios.html
@@ -36,7 +36,7 @@
         </div>
         <br>
         <div class="bottom">
-          <li><a href="FavoriteTalks.html">Favorite Talks</a> | <a href="Events.html">Events</a> | <a href="Join.html">Join</a> | <a href="About.html">About</a></li>
+          <li><a href="About.html">About</a> | <a href="Events.html">Events</a> | <a href="Join.html">Join</a> | <a href="FavoriteTalks.html">Favorite Talks</a></li>
         </div>
       </ul>
 </div>
@@ -85,7 +85,7 @@
             </div>
           <div class="footerListWords">
             <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx</a>
-            <a href="Join.php">Become a member</a>
+            <a href="Join.html">Become a member</a>
             <a href="http://www.ted.com/" target="_blank">TED</a>
           </div>
         </div>
@@ -93,6 +93,7 @@
           <div class="footerList">
             <a href="http://www.ted.com/" target="_blank">This independent TEDx event is operated under license from TED.</a>
           </div>
+          <p> &#169; 2016 Designed and developed by Jessica Tang and Aaron Grode.</p>
         </div>
       </div>
   </div>
