exec pics added and compressed

--- a/About.html
+++ b/About.html
@@ -61,14 +61,14 @@
     <a href="Exec_bios.html#bio1">
       <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
-     <a href="Exec_bios.html#bio2"> <li class="execMember"><img src="Sofi.png" onmouseover="this.src='Sofi.png';"
-                onmouseout="this.src='Sofi.png';"></li></a>
+     <a href="Exec_bios.html#bio2"> <li class="execMember"><img src="Sofi.jpg" onmouseover="this.src='Sofi.jpg';"
+                onmouseout="this.src='Sofi.jpg';"></li></a>
      <a href="Exec_bios.html#bio3"> <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
-     <a href="Exec_bios.html#bio4"> <li class="execMember"><img src="Lindsay.png"onmouseover="this.src='Lindsay.png';"
-                onmouseout="this.src='Lindsay.png';"></li></a>
-     <a href="Exec_bios.html#bio5"> <li class="execMember"><img src="mitchell.jpg"onmouseover="this.src='mitchell_hover.jpg';"
-                onmouseout="this.src='mitchell.jpg';"></li></a>
+     <a href="Exec_bios.html#bio4"> <li class="execMember"><img src="Lindsay.jpg"onmouseover="this.src='Lindsay.jpg';"
+                onmouseout="this.src='Lindsay.jpg';"></li></a>
+     <a href="Exec_bios.html#bio5"> <li class="execMember"><img src="Mitchell.jpg"onmouseover="this.src='Mitchell_hover.jpg';"
+                onmouseout="this.src='Mitchell.jpg';"></li></a>
      <a href="Exec_bios.html#bio6"><li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
   </ul>
