--- a/About.html
+++ b/About.html
@@ -67,7 +67,7 @@
                 onmouseout="this.src='filler.jpg';"></li></a>
      <a href="Exec_bios.html#bio4"> <li class="execMember"><img src="Lindsay.jpg"onmouseover="this.src='Lindsay.jpg';"
                 onmouseout="this.src='Lindsay.jpg';"></li></a>
-     <a href="Exec_bios.html#bio5"> <li class="execMember"><img src="Mitchell.jpg"onmouseover="this.src='mitchell_hover.jpg';"
+     <a href="Exec_bios.html#bio5"> <li class="execMember"><img src="mitchell.jpg"onmouseover="this.src='mitchell_hover.jpg';"
                 onmouseout="this.src='Mitchell.jpg';"></li></a>
      <a href="Exec_bios.html#bio6"><li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
